Fixing dark mode code highlight

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,4 +12,8 @@
   a {
     color: #58a6ff;
   }
+
+  .highlighter-rouge {
+    color: $text-gray-dark;
+  }
 }
